# mcst_emu

./: .gitignore  CMakeLists.txt  README.md  assemble_dir.sh  prof_report.md  prof_report_short.md  profile_callgrind.sh  profile_perf_stat.sh
assembler/: CMakeLists.txt
assembler/include/: assembler.h  binary_writer.h  encoder.h  lexer.h  parser.h  token.h
assembler/src/: assembler.cpp  binary_writer.cpp  encoder.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp
common/: CMakeLists.txt
common/include/: isa.h  types.h
common/src/: isa.cpp
docs/: PROC.md
emulator/: CMakeLists.txt
emulator/include/: command_line.h  emulator.h  opMemory.h  ranges.h  tick_ranges.h  trace.h
emulator/src/: command_line.cpp  emulator.cpp  main.cpp  opMemory.cpp  ranges.cpp  tick_ranges.cpp  trace.cpp
examples/: README.md  call_ret.s  ex1.s  ex10.s  ex2.s  ex3.s  ex4.s  ex5.s  ex6.s  ex7.s  ex8.s  ex9.s  high.s  loop_ajmp.s  loop_brnz.s  loop_brz_rjmp.s  prof_arith_loop.s  recursive_factorial.s  stack.s  stack_aspr.s  stack_uninit.s
prof_examples/: README.md  prof_ajmp_loop.s  prof_branch_loop.s  prof_call_loop.s  prof_memory_loop.s  prof_page_alloc_loop.s
tests/: CMakeLists.txt
tests/assembler/: assembler_tests.cpp
tests/assembler/encoder/: encoder_tests.cpp
tests/assembler/lexer/: lexer_tests.cpp
tests/assembler/parser/: parser_tests.cpp
tests/emulator/: emulator_tests.cpp
tests/emulator/command_line/: command_line_tests.cpp
tests/emulator/memory/: memory_tests.cpp
tests/integration/: assembler_emulator_tests.cpp
tests/support/: temporary_directory.h
